@@ -113,6 +113,7 @@ public:
   pwr_tStatus triggPostCreate( wb_object& o);
   pwr_tStatus triggPostMove( wb_object& o);
   pwr_tStatus triggPostUnadopt( wb_object& father, wb_object& o);
+  pwr_tStatus triggPostRename(wb_object& o);
 
   ldh_sRefInfo *refinfo( wb_object o, ldh_sRefInfo *rp);
 
